--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -9,6 +9,7 @@ Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/mar
 
 :::tip
 
+<!-- truncate -->
 Use the power of React to create interactive blog posts.
 
 ```js
